# nestly

./: .gitignore  main.py  pom.xml  pyproject.toml
alembic/: env.py
alembic/versions/: 249095ae09aa_created_the_properties_propertymedia_.py
api-gateway/: pom.xml
auth-service/: pom.xml
backend/: .gitignore  pom.xml
backend/api-gateway/: pom.xml
backend/application-service/: pom.xml
backend/listing-service/: pom.xml
backend/notification-service/: pom.xml
backend/shared-lib/: pom.xml
backend/verification-service/: pom.xml
nestly-frontend/: index.html  package.json  pnpm-lock.yaml
nestly-frontend/src/: App.module.scss  App.tsx  main.tsx
nestly-frontend/src/constants/: constants.ts
nestly-frontend/src/router/: Router.tsx
nestly-frontend/src/types/: properties.types.ts  user.types.ts
nestly_backend_IR/: main.py  pyproject.toml
nestly_backend_IR/alembic/: env.py
nestly_backend_IR/alembic/versions/: 249095ae09aa_created_the_properties_propertymedia_.py
nestly_backend_IR/src/core/: config.py
nestly_backend_IR/src/db/: session.py
nestly_backend_IR/src/models/: __init__.py  base.py  documents.py  properties.py  report.py
shared-lib/: pom.xml
src/core/: config.py
src/db/: session.py
src/models/: __init__.py  base.py  documents.py  properties.py  report.py
src/repositories/: properties_repo.py
src/router/: property_listing_router.py
src/schemas/: properties_schema.py  verificaion_schema.py
src/services/: consolidate_service.py  properties_service.py  reviewers_service.py  verification_service.py
src/utils/: s3_client.py
(+153 files in other folders)
